# gopro_parser

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  gopro_to_euroc.cpp
gpmf_parser/include/: GPMF_mp4reader.h  GPMF_parser.h
gpmf_parser/src/: GPMF_mp4reader.c  GPMF_print.c
include/: ImuExtractor.h  Utils.h  VideoExtractor.h  date.h
python/: euroc_to_rosbag.py
scripts/: euroc_to_rosbag.sh  gopro_to_euroc.sh
src/: ImuExtractor.cpp  Utils.cpp  VideoExtractor.cpp
